III-2025: Copy last time-span when creating new one

--- a/src/event_form/components/calendar/form-event-calendar.component.html
+++ b/src/event_form/components/calendar/form-event-calendar.component.html
@@ -20,7 +20,7 @@
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="calendar-time-spans" ng-if="!calendar.weeklyRecurring">
-                <div class="calendar-time-span" ng-repeat="timeSpan in calendar.timeSpans">
+                <div class="calendar-time-span" ng-repeat="timeSpan in calendar.timeSpans track by $index">
                     <span ng-show="calendar.timeSpans.length > 1" aria-hidden="true" ng-click="calendar.removeTimeSpan(timeSpan)" class="close">×</span>
                     <div class="dates">
                         <div class="date form-group">
