--- a/src/event_form/components/city/city-suggestion.html
+++ b/src/event_form/components/city/city-suggestion.html
@@ -1,1 +1,1 @@
-<a href tabindex="-1" ng-bind-html="match.label | uibTypeaheadHighlight:query"></a>
+<a href tabindex="-1" ng-bind-html="match.label | uibTypeaheadHighlight:query" class="city-suggestion"></a>
