III-1953 re-add isToday to controller and modal

--- a/src/event_form/components/publish-modal/event-form-publish-modal.html
+++ b/src/event_form/components/publish-modal/event-form-publish-modal.html
@@ -13,7 +13,7 @@
       <div class="form-group">
         <div class="radio">
           <label>
-            <input type="radio" name="publishDate" ng-model="efpmc.hasPublicationDate" ng-checked="efpmc.hasPublicationDate" value="true" aria-label="Later, vanaf">
+            <input type="radio" name="publishDate" ng-model="efpmc.hasPublicationDate" ng-checked="!efpmc.isToday" value="true" aria-label="Later, vanaf">
             Later, vanaf
           </label>
         </div>
