III-2025: Rename whole-day classes to all-day

--- a/src/event_form/components/calendar/form-event-calendar.component.html
+++ b/src/event_form/components/calendar/form-event-calendar.component.html
@@ -43,13 +43,13 @@
                         </div>
                     </div>
                     <div class="timing-control">
-                        <div class="checkbox whole-day">
+                        <div class="checkbox all-day">
                             <label for="time-span-{{$index}}-has-timing-info">
                                 <input type="checkbox"
                                        id="time-span-{{$index}}-has-timing-info"
                                        ng-model="timeSpan.allDay"
                                        ng-change="calendar.delayedTimeSpanChanged()"
-                                       class="whole-day-check"> <span>Hele dag</span>
+                                       class="all-day-check"> <span>Hele dag</span>
                             </label>
                         </div>
                     </div>
