--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -73,9 +73,8 @@
     .make-sm-column(2);
   }
 
-  .error {
+  .requirements {
     .make-sm-column(12);
-    margin-top: 10px;
   }
 
   .timing-control {
