III-2025: Instantly save time-span when changing all-day

--- a/src/event_form/components/calendar/form-event-calendar.component.html
+++ b/src/event_form/components/calendar/form-event-calendar.component.html
@@ -48,7 +48,7 @@
                                 <input type="checkbox"
                                        id="time-span-{{$index}}-has-timing-info"
                                        ng-model="timeSpan.allDay"
-                                       ng-change="calendar.delayedTimeSpanChanged()"
+                                       ng-change="calendar.instantTimeSpanChanged()"
                                        class="all-day-check"> <span>Hele dag</span>
                             </label>
                         </div>
