--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -66,11 +66,13 @@
   padding-right: 30px;
 
   .date {
-    .make-sm-column(3);
+    .make-sm-column(6);
+    .make-md-column(3);
   }
 
   .time {
-    .make-sm-column(2);
+    .make-sm-column(3);
+    .make-md-column(2);
   }
 
   .requirements {
@@ -78,7 +80,8 @@
   }
 
   .timing-control {
-    .make-sm-column(2);
+    .make-sm-column(3);
+    .make-md-column(2);
 
     .all-day {
       margin-top: 2.2em;
