--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -137,3 +137,15 @@
     .make-sm-column(8);
   }
 }
+
+.form-calendar-period {
+  .periodic-info {
+    .make-row();
+
+    .start-date,
+    .end-date  {
+      .make-sm-column(6);
+      .make-md-column(3);
+    }
+  }
+}
