III-2025: Fix inline checkbox margins

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -13,7 +13,9 @@
 
 // Forms
 .checkbox label > [type="checkbox"],
-label.checkbox > [type="checkbox"] {
+.checkbox-inline label > [type="checkbox"],
+label.checkbox > [type="checkbox"],
+label.checkbox-inline > [type="checkbox"] {
   margin-top: 6px;
 }
 
