--- a/src/styles/form-calendar.less
+++ b/src/styles/form-calendar.less
@@ -154,9 +154,17 @@
     .make-row();
 
     .start-date,
-    .end-date  {
+    .end-date {
       .make-sm-column(6);
       .make-md-column(3);
+    }
+
+    .requirements {
+      .make-sm-column(12);
+
+      .alert {
+        margin-bottom: 0;
+      }
     }
   }
 }
