--- a/src/dashboard/components/dashboard-item.directive.html
+++ b/src/dashboard/components/dashboard-item.directive.html
@@ -3,6 +3,7 @@
     <a ng-href="{{ event.url  + '/preview' }}" ng-bind="::event.name"></a>
   </strong>
   <span ng-if="event.workflowStatus==='DELETED' || event.workflowStatus==='REJECTED' || event.workflowStatus==='DRAFT' " class="label label-default">Niet gepubliceerd</span>
+  <span class="label label-default" ng-if="offerCtrl.hasFutureAvailableFrom && !offerCtrl.offerExpired && event.workflowStatus!=='DRAFT'" >Online op <span ng-bind="::event.availableFrom | date:'yyyy-MM-dd'"></span></span>
   <br/>
   <small>
     <span class="dashboard-item-type" ng-bind="::event.type.label"></span>
