--- a/src/event_form/components/publish-modal/event-form-publish-modal.html
+++ b/src/event_form/components/publish-modal/event-form-publish-modal.html
@@ -2,7 +2,7 @@
   <h4 class="modal-title">Kies een publicatiedatum</h4>
 </div>
 <div id="event-form-publish-modal" class="modal-body">
-  <p>Vanaf wanneer mag dit online verschijnen?</p>
+  <p>Vanaf wanneer mag dit online verschijnen? </strong><em class="text-info"><i class="fa fa-exclamation-circle" aria-hidden="true"></i> Opgelet, deze publicatiedatum kan je maar één keer instellen en nadien niet meer wijzigen.</em></strong></p>
     <div ng-if="!efpmc.eventFormData.availableFrom" class="form-inline">
       <div class="form-group">
         <div class="radio">
