III-1953 Fixes after QA

--- a/src/event_form/components/publish-modal/event-form-publish-modal.html
+++ b/src/event_form/components/publish-modal/event-form-publish-modal.html
@@ -18,6 +18,7 @@
                     ng-model="efpmc.publicationDate"
                     is-open="efpmc.drp.startOpened"
                     ng-required="true"
+                    ng-focus="efpmc.onFocus()"
                     datepicker-options="efpmc.drp.options"/>
             <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="efpmc.drp.startOpened = !efpmc.drp.startOpened">
