III-1425 change callback for organiser-address component

--- a/src/event_form/components/organizer-address/organizer-address.html
+++ b/src/event_form/components/organizer-address/organizer-address.html
@@ -6,7 +6,7 @@
                 <input type="text"
                        class="form-control"
                        name="street"
-                       ng-blur="oac.validateStreet()"
+                       ng-change="oac.validateStreet()"
                        ng-model="oac.address.streetAddress"
                        required>
             </div>
