--- a/src/event_form/components/organizer/event-form-organizer-modal.html
+++ b/src/event_form/components/organizer/event-form-organizer-modal.html
@@ -60,45 +60,6 @@
       </div>
 
       <div class="row">
-        <div class="col-sm-12 col-md-8">
-          <div class="form-group">
-            <label>Straat en nummer</label>
-            <input type="text" class="form-control" name="street" ng-model="newOrganizer.address.streetAddress">
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-12 col-md-8">
-          <div class="form-group">
-            <label for="organizer-gemeente-autocomplete" id="gemeente-label" ng-hide="selectedCity !== ''">
-              Gemeente
-            </label>
-            <div id="gemeente-kiezer" ng-hide="selectedCity !== ''">
-            <input id="organizer-gemeente-autocomplete"
-                   type="text"
-                   class="form-control uib-typeahead"
-                   placeholder="Gemeente of postcode"
-                   ng-model="cityAutocompleteTextField"
-                   uib-typeahead="city as city.zip + ' ' + city.name for city in cities | filter:filterCities($viewValue) | orderBy:orderByLevenshteinDistance($viewValue)"
-                   typeahead-on-select="selectCity($item, $label)"
-                   typeahead-min-length="2"
-                   typeahead-template-url="templates/city-suggestion.html"
-                   autocomplete="off">
-              <div class="alert alert-danger" role="alert" ng-show="cityAutoCompleteError">
-                Er was een probleem tijdens het ophalen van de steden.
-              </div>
-            </div>
-          </div>
-
-          <div class="form-group" id="gemeente-gekozen" ng-if="selectedCity">
-            <span class="btn-chosen" id="gemeente-gekozen-button" ng-bind="::selectedCity"></span>
-            <a href="#" class="btn btn-default btn-link" ng-click="changeCitySelection()">Wijzigen</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
         <div class="col-sm-12">
           <p><strong>Contact</strong></p>
         </div>
@@ -156,6 +117,9 @@
         </div>
       </div>
     </form>
+
+    <udb-organizer-address address="newOrganizer.address"></udb-organizer-address>
+
   </section>
 
   <section ng-show="organizersFound">
